tests/NormalTests/paczka1/small_fuzzy/85692250.err
Error in line 6: xbgm A387 30,1
Error in line 9: xbgm A564 85,2
Error in line 14: 6OeFAuEq A(87 96,2
